--- a/style.css
+++ b/style.css
@@ -1,27 +1,70 @@
 body {
-  background-color: bisque;
-  margin: 10px;
+  margin: 0;
+  padding: 0;
+  font-family: Arial, sans-serif;
+}
+
+#navbar {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  background-color: #333;
+  color: #fff;
+}
+
+#navbar ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: space-around;
+}
+
+#navbar a {
+  color: #fff;
+  text-decoration: none;
   padding: 10px;
 }
 
-h1 {
-  text-align: center;
+#navbar a:hover {
+  background-color: #555;
 }
 
-p {
-  text-align: center;
-}
-
-h2 {
-  text-align: center;
-}
-
-a {
-  text-align: center;
-}
-
-.navbar {
+#welcome-section {
+  height: 100vh;
   display: flex;
-  justify-content: space-between;
   align-items: center;
+  justify-content: center;
+  text-align: center;
+  background-color: #f1f1f1;
+}
+
+#projects {
+  padding: 20px;
+}
+
+.project-tile {
+  background-color: #ddd;
+  padding: 20px;
+  margin-bottom: 20px;
+}
+
+#profile-link {
+  display: block;
+  text-align: center;
+  padding: 10px;
+  background-color: #333;
+  color: #fff;
+  text-decoration: none;
+}
+
+/* Media Query for screens with max-width of 600px */
+@media (max-width: 600px) {
+  #navbar ul {
+      flex-direction: column;
+  }
+
+  #navbar a {
+      margin-bottom: 10px;
+  }
 }
