--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
   position: fixed;
   top: 0;
   width: 100%;
-  background-color: #333;
+  background-color: antiquewhite;
   color: #fff;
 }
 
