--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
   position: fixed;
   top: 0;
   width: 100%;
-  background-color: antiquewhite;
+  background-color: #555;
   color: #fff;
 }
 
@@ -21,7 +21,7 @@ body {
 }
 
 #navbar a {
-  color: #fff;
+  color: black;
   text-decoration: none;
   padding: 10px;
 }
@@ -36,9 +36,16 @@ body {
   align-items: center;
   justify-content: center;
   text-align: center;
-  background-color: #f1f1f1;
+  background-color: bisque;
 }
 
+ .section__p {
+ background-color: bisque;
+ color: black;
+ text-align: center;
+ padding: 1rem;
+ position: relative;
+ }
 #projects {
   padding: 20px;
 }
